--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^12.6.0",
     "typescript": "~4.5.5"
   },
   "eslintConfig": {
